Logo added, Theme colour changed from orange to brown

--- a/index.html
+++ b/index.html
@@ -183,8 +183,8 @@
                 <div class="col-lg-6 col-md-6">
                     <div class="about__text">
                         <div class="section-title">
-                            <span>About Cake shop</span>
-                            <h2>Love & Sweet Caking Your Way!</h2>
+                            <span>About Arshiya's Cake shop</span>
+                            <h2>Love & Sweetness Baking Your Way!</h2>
                         </div>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in velit ut libero commodo
                             sagittis. Donec posuere,
@@ -202,10 +202,10 @@
                             </div>
                         </div>
                         <div class="about__bar__item">
-                            <p>Cake Class</p>
+                            <p>Cake With Love</p>
                             <div id="bar2" class="barfiller">
                                 <div class="tipWrap"><span class="tip"></span></div>
-                                <span class="fill" data-percentage="80"></span>
+                                <span class="fill" data-percentage="100"></span>
                             </div>
                         </div>
                         <div class="about__bar__item">
@@ -415,8 +415,8 @@
                 <div class="col-lg-6">
                     <div class="class__form">
                         <div class="section-title">
-                            <span>Class cakes</span>
-                            <h2>Made from your <br />own hands</h2>
+                            <span>Your cakes</span>
+                            <h2>Made With Love !</h2>
                         </div>
                         <form action="#">
                             <input type="text" placeholder="Name">
@@ -674,7 +674,7 @@
                             <span>Follow us on instagram</span>
                             <h2>Sweet moments are saved as memories.</h2>
                         </div>
-                        <h5><i class="fa fa-instagram"></i> @thecakeshop</h5>
+                        <h5><i class="fa fa-instagram"></i> @arshiya'scakeshop</h5>
                     </div>
                 </div>
                 <div class="col-lg-8">
@@ -717,7 +717,7 @@
     <!-- Instagram Section End -->
 
     <!-- Map Begin -->
-    <div class="map">
+    <!-- <div class="map">
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 col-md-7">
@@ -725,7 +725,7 @@
                         <h6>India</h6>
                         <ul>
                             <li>Mumbai, Maharashtra, India</li>
-                            <li>thecakeshop@support.com</li>
+                            <li>arshiya'scakeshop@support.com</li>
                             <li>+1 000-000-1000</li>
                         </ul>
                     </div>
@@ -737,14 +737,15 @@
                 src="https://www.google.com/maps/embed/v1/view?zoom=14&center=19.0726%2C72.8845&key=AIzaSyCTG1PhZEuPkvHH9DovBumVhbFIcuRMg0g"
                 height="300" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
         </div>
-    </div>
+    </div> -->
     <!-- Map End -->
 
-    <!-- <iframe width="520" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" id="gmap_canvas" src="https://maps.google.com/maps?width=520&amp;height=400&amp;hl=en&amp;q=%20Mumbai+(thecakeshop)&amp;t=&amp;z=12&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe> <a href='https://www.versicherungen.at/cyber-versicherung/'>Cyber-Versicherung</a> <script type='text/javascript' src='https://embedmaps.com/google-maps-authorization/script.js?id=38d42b9128b781af250aacc9f4540286d021c848'></script> -->
+    <!-- <iframe width="520" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" id="gmap_canvas" src="https://maps.google.com/maps?width=520&amp;height=400&amp;hl=en&amp;q=%20Mumbai+(arshiya'scakeshop)&amp;t=&amp;z=12&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe> <a href='https://www.versicherungen.at/cyber-versicherung/'>Cyber-Versicherung</a> <script type='text/javascript' src='https://embedmaps.com/google-maps-authorization/script.js?id=38d42b9128b781af250aacc9f4540286d021c848'></script> -->
 
 
     <!-- Footer Section Begin -->
-    <footer class="footer set-bg" data-setbg="img/footer-bg.jpg">
+    <!-- <footer class="footer set-bg" data-setbg="img/footer-bg-1.jpg"  > -->
+    <footer class="footer set-bg" style="background-color: antiquewhite;"  >
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 col-md-6 col-sm-6">
@@ -760,7 +761,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="footer__about">
                         <div class="footer__logo">
-                            <a href="#"><img src="img/footer-logo.png" alt=""></a>
+                            <a href="#"><img src="img/footer-logo-1.png" alt=""></a>
                         </div>
                         <p>Lorem ipsum dolor amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                             labore dolore magna aliqua.</p>
