--- a/contact.html
+++ b/contact.html
@@ -156,7 +156,7 @@
                                 <h6>India</h6>
                                 <ul>
                                     <li>Mumbai, Maharashtra, India</li>
-                                    <li>thecakeshop@support.com</li>
+                                    <li>arshiya'scakeshop@support.com</li>
                                     <li>+1 000-000-1000</li>
                                 </ul>
                             </div>
@@ -181,7 +181,7 @@
                                     <p>+1 000-000-1000</p>
                                 </li>
                                 <li><span class="icon_mail_alt"></span>
-                                    <p>thecakeshop@support.com</p>
+                                    <p>arshiya'scakeshop@support.com</p>
                                 </li>
                             </ul>
                         </div>
@@ -258,7 +258,8 @@
     <!-- Contact Section End -->
 
     <!-- Footer Section Begin -->
-    <footer class="footer set-bg" data-setbg="img/footer-bg.jpg">
+    <!-- <footer class="footer set-bg" data-setbg="img/footer-bg-1.jpg"  > -->
+    <footer class="footer set-bg" style="background-color: antiquewhite;"  >
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 col-md-6 col-sm-6">
@@ -274,10 +275,10 @@
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="footer__about">
                         <div class="footer__logo">
-                            <a href="#"><img src="img/footer-logo.png" alt=""></a>
+                            <a href="#"><img src="img/footer-logo-1.png" alt=""></a>
                         </div>
                         <p>Lorem ipsum dolor amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore dolore magna aliqua.</p>
+                            labore dolore magna aliqua.</p>
                         <div class="footer__social">
                             <a href="#"><i class="fa fa-facebook"></i></a>
                             <a href="#"><i class="fa fa-twitter"></i></a>
@@ -303,9 +304,9 @@
                 <div class="row">
                     <div class="col-lg-7">
                         <p class="copyright__text text-white"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                          <!-- Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a> -->
-                          <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                      <!-- </p>
+        <!-- Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a> -->
+        <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+        <!-- </p>
                   </div>
                   <div class="col-lg-5">
                     <div class="copyright__widget">
@@ -318,9 +319,9 @@
                 </div>
             </div>
         </div> -->
-    </div>
-</footer>
-<!-- Footer Section End -->
+        </div>
+    </footer>
+    <!-- Footer Section End -->
 
 <!-- Search Begin -->
 <div class="search-model">
