Pop added to prod-details

--- a/prod-details.html
+++ b/prod-details.html
@@ -217,7 +217,7 @@
                                     <input type="text" value="2">
                                 </div>
                             </div> -->
-                            <a href="#" class="primary-btn">Add to cart</a>
+                            <a href="" class="primary-btn" data-toggle="modal" data-target="#exampleModalCenter">Book Now</a>
                             <!-- <a href="#" class="heart__btn"><span class="icon_heart_alt"></span></a> -->
                         </div>
                     </div>
@@ -406,7 +406,7 @@
 
     <!-- Footer Section Begin -->
     <!-- <footer class="footer set-bg" data-setbg="img/footer-bg-1.jpg"  > -->
-    <footer class="footer set-bg" style="background-color: antiquewhite;"  >
+    <footer class="footer set-bg" style="background-color: antiquewhite;">
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 col-md-6 col-sm-6">
@@ -469,6 +469,39 @@
         </div>
     </footer>
     <!-- Footer Section End -->
+
+
+    <!--Modal Begins-->
+    <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog"
+        aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content" style="background-color: antiquewhite;">
+                <div class="modal-header" style="background-color: burlywood">
+                    <button type="button" class="close d-flex align-items-center justify-content-center"
+                        data-dismiss="modal" aria-label="Close" style="color: black;">
+                        <span aria-hidden="true" class="fa fa-close"></span>
+                    </button>
+                </div>
+                <div class="row no-gutters">
+                </div>
+                <!-- <div class="modal-body p-2 p-md-5 d-flex align-items-center color-1 class__form"> -->
+                <div class="modal-body d-flex align-items-center class__form">
+                    <div class="text w-100 section-title">
+                        <h2>Book Your Cake !</h2>
+                        <br>
+                        <form action="#">
+                            <input type="text" placeholder="Name">
+                            <input type="text" placeholder="Phone">
+                            <input type="text" placeholder="Type your requirements">
+                            <button type="submit" class="site-btn">Start Baking ✨</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    </div>
+    <!--Modal Ends-->
 
     <!-- Search Begin -->
     <div class="search-model">
